# SC-Binding-Utility

./: README.md  VERSION.md  package.json
.github/: copilot-instructions.md
SC-Binding-Utility-main/: .gitignore  AllBinds.xml  Categories.json  DEVICE_DATABASE_MIGRATION.md  HID_DEBUGGER_README.md  TEMPLATE_REFACTOR_DESIGN.md  package-lock.json  package.json  vite.config.js
SC-Binding-Utility-main/.github/: copilot-instructions.md
SC-Binding-Utility-main/joystick profiles/: VKB Gladiator NXT Dual.json  VKB_Gladiator_NXT_test.json
SC-Binding-Utility-main/scripts/: update-version.cjs
SC-Binding-Utility-main/src/: axis-mapping.js  button-renderer.js  character-manager.css  character-manager.js  custom-dropdown.css  custom-dropdown.js  hid-debugger.css  hid-debugger.html  hid-debugger.js  index.html  input-debugger.css  input-debugger.js  input-utils.js  joystick-viewer.css  joystick-viewer.js  main.js  sc-directory.html  styles.css  template-editor-v2.js  template-editor.js  tooltip.css  tooltip.js  update-checker.js
SC-Binding-Utility-main/src-tauri/: Cargo.toml  UNBIND_ALL.xml  device-database.json  tauri.conf.json
SC-Binding-Utility-main/src-tauri/src/: device_database.rs  device_profiles.rs  directinput.rs  hid_reader.rs  keybindings.rs  lib.rs  main.rs
joystick profiles/: VKB Gladiator NXT Dual.json  VKB_Gladiator_NXT_test.json
src/: index.html  joystick-viewer.js  main.js  styles.css  template-editor-v2.js  template-editor.css  template-editor.js  update-checker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: directinput.rs  lib.rs
